--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -25,6 +25,20 @@
   .row {
     width: 67%;
     margin: 0 auto;
+    .span4 {
+      h3 {
+        margin: 0;
+        margin-left: 5px;
+      }
+      padding: 5px;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+    }
+  }
+  .drop-hover {
+    border-radius: 5px;
+    border: 2px dashed #aaa;
   }
   #delete {
     display: none;
