--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -27,7 +27,7 @@
     }
   }
   h2 {
-    margin: 30px 0;
+    color: #DEAE23;
   }
   .row {
     width: 67%;
@@ -35,6 +35,8 @@
     margin-top: 30px;
     .span4 {
       h3 {
+        color: #3F2C42;
+        border-bottom: 2px solid #755d79;
         margin: 0;
         margin-left: 5px;
       }
@@ -57,10 +59,11 @@
     margin: 0 auto;
     display: block;
     border: 0;
+    color: #725913;
     font-size: 24px;
     height: 30px;
     width: 350px;
-    border-bottom: 1px solid #7e7e7e;
+    border-bottom: 1px solid #725913;
     border-radius: 0;
     box-shadow: none;
   }
