Fixes disappearing bug when moving object to current list

--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -29,6 +29,11 @@
   h2 {
     color: #DEAE23;
   }
+  #done-tasks {
+    span {
+      text-decoration: line-through;
+    }
+  }
   .row {
     width: 67%;
     margin: 0 auto;
