--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 <body>
 
 <%= yield %>
-<p>You are logged in as <%= current_user.email %><% link_to "Logout", logout_path, method: :delete %></p>
+<% if current_user %>
+  <p>You are logged in as <%= current_user.email %><%= link_to "Logout", logout_path, method: :delete %></p>
+<% end %>
 </body>
 </html>
