--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
 <%= yield %>
 <% if current_user %>
-  <p>You are logged in as <%= current_user.email %><%= link_to "Logout", logout_path, method: :delete %></p>
+  <p class="user">You are logged in as <%= current_user.email %><%= link_to "Logout", logout_path, method: :delete %></p>
 <% end %>
 </body>
 </html>
