Fixes drag behaviour

--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -21,6 +21,7 @@ h2 {
     }
     li {
       cursor: move;
+      display: block;
       margin-left: 35px;
       list-style-type: none;
       line-height: 2.5em;
