Adds a powered by geembo disclaimer

--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -32,6 +32,17 @@ h2 {
   h2 {
     color: #DEAE23;
   }
+  .powered {
+    margin-top: 15px;
+    color: #ccc;
+    font-size: 12px;
+    font-style: italic;
+    a {
+      color: #DEAE23;
+      text-decoration: underline;
+    }
+
+  }
   #done-tasks {
     span {
       text-decoration: line-through;
