--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -50,9 +50,9 @@ h2 {
   }
   .row {
     width: 67%;
-    margin: 0 auto;
-    margin-top: 30px;
+    margin: 30px auto 100px
     .span4 {
+      margin-left: 18px;
       h3 {
         color: #3F2C42;
         border-bottom: 2px solid #755d79;
