Fixes some css error

--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -50,7 +50,7 @@ h2 {
   }
   .row {
     width: 67%;
-    margin: 30px auto 100px
+    margin: 30px auto 100px;
     .span4 {
       margin-left: 18px;
       h3 {
