Adds some feature specs

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,7 @@
       <%= form_for @user do |f| %>
         <% if @user.errors.any? %>
           <div class="error_messages">
-            <h2>Form is invalid</h2>
+            <h4>Some errors occured</h4>
             <ul>
               <% @user.errors.full_messages.each do |message| %>
                 <li><%= message %></li>
